Prevent date picker "date is out of range" error when jumping to the bottom of the feed.

--- a/src/ui/page/PageHeader.css
+++ b/src/ui/page/PageHeader.css
@@ -34,5 +34,4 @@
 
 #page-header .btn {
     margin-left: .5rem;
-    margin-bottom: .5rem;
 }
